@@ -1,4 +1,13 @@
 
+2023-05-31  Simon Sobisch <simonsobisch@gnu.org>
+
+	* codegen.c (output_init_comment_and_source_ref) [NO_INIT_SOURCE_LOC]:
+	  option to skip generating the source location in DATA DIVISION
+
+2023-05-30  Simon Sobisch <simonsobisch@gnu.org>
+
+	* typeck.y (is_subordinate_to): start with parent, not field
+
 2023-05-28  Simon Sobisch <simonsobisch@gnu.org>
 
 	* parser.y: allow expressions for screen related clauses
